--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Jupyter Notebook files
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
+
+# data folder
+data/
+
 # History files
 .Rhistory
 .Rapp.history
